# Aloha-xromium

./: .gitignore  BUILD.gn  LICENSE  README.md  aloha.patch  aloha_paks.gni  aloha_repack_locales.gni  supported-chromium-verisons.json
app/: aloha_content_main_delegate.cc  aloha_content_main_delegate.h  aloha_exe_main_win.cc  aloha_main.cc  aloha_main.h  mac_init.h  mac_init.mm  main.cc  main_delegate.cc  main_delegate.h
browser/: BUILD.gn  README.md  browser_context.cc  browser_context.h  browser_main_parts.cc  browser_main_parts.h  browser_main_parts_aura.cc  browser_main_parts_mac.mm  content_browser_client.cc  content_browser_client.h  webui_controller_factory.cc  webui_controller_factory.h
browser/client/: BUILD.gn  README.md  aloha_browser_client.cc  aloha_browser_client.h  aloha_content_browser_client.cc  aloha_content_browser_client.h  aloha_content_client.cc  aloha_content_client.h  aloha_content_client_main_parts.cc  aloha_content_client_main_parts.h  aloha_content_client_main_parts_aura.cc  aloha_content_client_main_parts_aura.h  aloha_content_client_main_parts_chromeos.cc  aloha_content_client_main_parts_desktop_aura.cc  aloha_content_client_main_parts_mac.mm  aloha_content_main_delegate.cc  aloha_content_main_delegate.h  aloha_render_view_context_menu.cc  aloha_render_view_context_menu.h
browser/devtools/: BUILD.gn  aloha_devtools_manager_delegate.h  devtools_frontend.cc  devtools_frontend.h  devtools_manager_delegate.cc  devtools_manager_delegate.h  devtools_server.cc  devtools_server.h
browser/devtools/mojom/: devtools.mojom
browser/profile/: BUILD.gn  aloha_browser_profile.cc  aloha_browser_profile.h  aloha_content_index_provider.cc  aloha_content_index_provider.h  aloha_download_manager_delegate.cc  aloha_download_manager_delegate.h  aloha_permission_manager.cc  aloha_permission_manager.h
browser/ui/aura/: aura_context.cc  aura_context.h  content_window.cc  content_window.h  fill_layout.cc  fill_layout.h
browser/ui/cocoa/: content_ns_window.h  content_ns_window.mm
browser/ui/color/: BUILD.gn  README.md  color_ids.h
browser/ui/menu/: BUILD.gn  setting_menu_model.cc  setting_menu_model.h  tab_menu_model.cc  tab_menu_model.h
browser/ui/native/: BUILD.gn  aloha_web_contents_view_delegate_views.cc  aloha_web_contents_view_delegate_views.h  setting_menu_model.cc  setting_menu_model.h  widget_delegate_view.cc  widget_delegate_view.h
browser/ui/views/: BUILD.gn  aloha_browser_content_view.cc  aloha_browser_content_view.h  aloha_views_delegate.h  aloha_views_delegate_aura.cc  aloha_views_delegate_mac.mm  aloha_web_contents_view_delegate_views.cc
browser/ui/views/browser_content/: aloha_browser_content_view.cc  aloha_browser_content_view.h
browser/ui/views/browser_content/public/: BUILD.gn  browser_content_view.cc  browser_content_view.h
browser/ui/views/controls/tabbed_pane/: README.md  tabbed_pane.cc  tabbed_pane.h  tabbed_pane_tab.cc  tabbed_pane_tab.h  tabbed_pane_tab_strip.cc  tabbed_pane_tab_strip.h
browser/ui/views/widget/: README.md  widget_delegate_view.cc  widget_delegate_view.h
browser/ui/views/widget/public/: BUILD.gn  aloha_widget_delegate_view.h
browser/ui/web/: browser.cc  browser.h  browser.mojom  browser_page_handler.cc  browser_page_handler.h  guest_view_manager_delegate.cc  guest_view_manager_delegate.h  web_view.cc  web_view.h  webshell_guest_view.cc  webshell_guest_view.h  webui.cc  webui.h
browser/url/: BUILD.gn  aloha_apps_url_loader.cc  aloha_apps_url_loader.h  aloha_url_loader_factory.cc  aloha_url_loader_factory.h  aloha_url_loader_request_interceptor.cc
browser/url/demo/: README.md  demo_navigation_url_loader_factory.cc  demo_navigation_url_loader_factory.h  demo_sub_resources_url_loader_factory.cc  demo_sub_resources_url_loader_factory.h  demo_url_loader_request_interceptor.cc  demo_url_loader_request_interceptor.h
common/: BUILD.gn  README.md  aloha_constants.cc  aloha_constants.h  aloha_content_client.cc  aloha_content_client.h  aloha_main_client.cc  aloha_main_client.h  aloha_origin_trial_policy.cc  aloha_origin_trial_policy.h  aloha_paths.cc  aloha_paths.h  content_client.cc  content_client.h
installer/: BUILD.gn  README.md  aloha-pack-patterns.json  main.cc
renderer/: content_renderer_client.cc  content_renderer_client.h  render_frame_observer.cc  render_frame_observer.h
resources/: BUILD.gn  aloha_exe.rc  aloha_resources.grd  unscaled_resources.grd
resources/app_icon/: app_icon_resources.grd
resources/app_icons/: aloha.ai  image_icons.grd
resources/browser/: BUILD.gn  index.html
resources/browser/ai-agent-dialog/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
resources/browser/ai-agent-dialog/src/: App.vue
resources/browser/ai-agent-dialog/src/components/: Chat.vue
resources/browser/aloha-app-main/: README.md  package.json  pnpm-lock.yaml  vite.config.js
resources/browser/aloha-app-main/src/: App.vue
resources/browser/aloha-app-main/src/components/: AlohaMain.vue
resources/vector_icons/: BUILD.gn  move_to_group.icon  open_devtools.icon  vector_icons.cc.template  vector_icons.h.template
tools/: README.md
tools/mini_install_packer/: constants.py  runme.py
tools/patcher/: runme.py
tools/webapp_builder/: runme.py
views/: BUILD.gn
views/controls/tabbed_pane/: tabbed_pane.cc
views/webview_contents/: BUILD.gn
views_content_client/: BUILD.gn  README.md  aloha_render_view_context_menu.cc  views_content_browser_client.cc  views_content_browser_client.h  views_content_client.cc  views_content_client.h  views_content_client_export.h  views_content_client_main_parts.cc  views_content_client_main_parts.h  views_content_client_main_parts_aura.cc  views_content_client_main_parts_aura.h  views_content_client_main_parts_chromeos.cc  views_content_client_main_parts_desktop_aura.cc  views_content_client_main_parts_mac.mm  views_content_main_delegate.cc  views_content_main_delegate.h
