source_set("common") {
  testonly = true
  sources = [
    "aloha_main_client.cc",
    "aloha_main_client.h",
  ]
  public_deps = [
    "//aloha:resources",
    "//aloha:resources_grit",
    "//aloha/browser/devtools:aloha_devtools",
    "//aloha/browser/ui/color:color",
    "//aloha/browser/ui/menu:menu",
    "//aloha/browser/ui/views/browser_content/public:public",
    "//aloha/browser/ui/views/widget/public:public",
    "//aloha/resources/browser:resources",
    "//aloha/resources/vector_icons:vector_icons",
    "//base",
    "//chrome/browser/resources/webui_gallery:resources",
    "//components/guest_view/browser",
    "//components/guest_view/common:mojom",
    "//components/guest_view/renderer",
    "//components/input:input",
    "//content/public/app",
    "//content/public/browser",
    "//content/public/renderer",
    "//ipc",
    "//mojo/public/cpp/bindings",
    "//net",
    "//third_party/blink/public:blink",
    "//ui/base",
    "//ui/display",
    "//ui/menus",
    "//ui/platform_window",
    "//ui/views:views",
    "//ui/views/controls/webview:webview",
    "//ui/webui",
    "//ui/wm:wm",
    "//v8:v8_headers",
  ]
}
