source_set("common") {
  sources = [
    "aloha_constants.cc",
    "aloha_constants.h",
    "aloha_content_client.cc",
    "aloha_content_client.h",
    "aloha_main_client.cc",
    "aloha_main_client.h",
    "aloha_origin_trial_policy.cc",
    "aloha_origin_trial_policy.h",
    "aloha_paths.cc",
    "aloha_paths.h",
  ]
  public_deps = [
    "//base",
    "//components/os_crypt/sync:os_crypt",
    "//components/prefs:prefs",
    "//content:content",
    "//services/network/public/cpp:cpp",
    "//third_party/blink/public/strings:strings",
    "//ui/base:base",
    "//ui/gfx",
    "//url:url",
  ]
}
