source_set("profile") {
  testonly = true
  sources = [
    "aloha_browser_profile.cc",
    "aloha_browser_profile.h",
  ]
  public_deps = [
    "//aloha:resources",
    "//aloha:resources_grit",
    "//aloha/browser/devtools:aloha_devtools",
    "//aloha/browser/ui/color:color",
    "//aloha/browser/ui/menu:menu",
    "//aloha/browser/ui/views/browser_content/public:public",
    "//aloha/browser/ui/views/widget/public:public",
    "//aloha/common:common",
    "//aloha/resources/browser:resources",
    "//aloha/resources/vector_icons:vector_icons",
    "//base",
    "//chrome/browser/resources/webui_gallery:resources",
    "//components/guest_view/browser",
    "//components/guest_view/common:mojom",
    "//components/guest_view/renderer",
    "//components/input:input",
    "//components/keyed_service/content:content",
    "//components/network_session_configurator/common:common",
    "//components/origin_trials:browser",
    "//components/origin_trials:common",
    "//components/prefs:prefs",
    "//content/public/app",
    "//content/public/browser",
    "//content/public/renderer",
    "//content/shell:content_shell_lib",
    "//content/shell:content_shell_lib",
    "//content/test:test_support",
    "//ipc",
    "//mojo/public/cpp/bindings",
    "//net",
    "//third_party/blink/public:blink",
    "//ui/base",
    "//ui/display",
    "//ui/menus",
    "//ui/platform_window",
    "//ui/views:views",
    "//ui/views/controls/webview:webview",
    "//ui/webui",
    "//ui/wm:wm",
    "//v8:v8_headers",
  ]
}
