source_set("profile") {
  sources = [
    "aloha_browser_profile.cc",
    "aloha_browser_profile.h",
    "aloha_content_index_provider.cc",
    "aloha_content_index_provider.h",
    "aloha_download_manager_delegate.cc",
    "aloha_download_manager_delegate.h",
    "aloha_permission_manager.cc",
    "aloha_permission_manager.h",
  ]
  public_deps = [
    "//aloha/common:common",
    "//base",
    "//components/keyed_service/content:content",
    "//components/network_session_configurator/common:common",
    "//components/origin_trials:browser",
    "//components/origin_trials:common",
    "//components/permissions:permissions",
    "//content:content",
  ]
}
