source_set("url") {
  testonly = true
  sources = [
    "aloha_url_loader_factory.cc",
    "aloha_url_loader_factory.h",
    "aloha_apps_url_loader.cc",
    "aloha_apps_url_loader.h",
    "demo/demo_navigation_url_loader_factory.cc",
    "demo/demo_navigation_url_loader_factory.h",
    "demo/demo_sub_resources_url_loader_factory.cc",
    "demo/demo_sub_resources_url_loader_factory.h",
    "demo/demo_url_loader_request_interceptor.cc",
    "demo/demo_url_loader_request_interceptor.h",
  ]
  public_deps = [
    "//aloha:resources",
    "//aloha:resources_grit",
    "//aloha/browser/devtools:aloha_devtools",
    "//aloha/browser/ui/color:color",
    "//aloha/browser/ui/menu:menu",
    "//aloha/browser/ui/views/browser_content/public:public",
    "//aloha/browser/ui/views/widget/public:public",
    "//aloha/common:common",
    "//aloha/resources/browser:resources",
    "//aloha/resources/vector_icons:vector_icons",
    "//base",
    "//chrome/browser/resources/webui_gallery:resources",
    "//components/guest_view/browser",
    "//components/guest_view/common:mojom",
    "//components/guest_view/renderer",
    "//components/input:input",
    "//components/os_crypt/sync:os_crypt",
    "//components/prefs:prefs",
    "//content/public/app",
    "//content/public/browser",
    "//content/public/common:common",
    "//content/public/renderer",
    "//content/shell:content_shell_lib",
    "//ipc",
    "//mojo/public/cpp/bindings",
    "//net",
    "//third_party/blink/public:blink",
    "//third_party/blink/public/strings:strings_grit",
    "//ui/base",
    "//ui/display",
    "//ui/menus",
    "//ui/platform_window",
    "//ui/views:views",
    "//ui/views/controls/webview:webview",
    "//ui/webui",
    "//ui/wm:wm",
    "//v8:v8_headers",
  ]
}
