source_set("url") {
  sources = [
    "aloha_apps_url_loader.cc",
    "aloha_apps_url_loader.h",
    "aloha_url_loader_factory.cc",
    "aloha_url_loader_factory.h",
    "demo/demo_navigation_url_loader_factory.cc",
    "demo/demo_navigation_url_loader_factory.h",
    "demo/demo_sub_resources_url_loader_factory.cc",
    "demo/demo_sub_resources_url_loader_factory.h",
    "demo/demo_url_loader_request_interceptor.cc",
    "demo/demo_url_loader_request_interceptor.h",
  ]
  public_deps = [
    "//aloha:resources",
    "//aloha/common:common",
    "//base:base",
    "//content:content",
    "//mojo/public/cpp/bindings:bindings",
    "//services/network/public/cpp:cpp",
  ]
}
