source_set("color") {
  sources = [
    "color_ids.h",
  ]
  public_deps = [
    "//base",
    "//chrome/browser/resources/webui_gallery:resources",
    "//components/guest_view/browser",
    "//components/guest_view/common:mojom",
    "//components/guest_view/renderer",
    "//components/input:input",
    "//ipc",
    "//mojo/public/cpp/bindings",
    "//net",
    "//third_party/blink/public:blink",
    "//ui/base",
    "//ui/display",
    "//ui/menus",
    "//ui/platform_window",
    "//ui/views:views",
    "//ui/views/controls/webview:webview",
    "//ui/webui",
    "//ui/wm:wm",
    "//v8:v8_headers",
  ]
}
