source_set("menu") {
  sources = [
    "setting_menu_model.cc",
    "setting_menu_model.h",
    "tab_menu_model.cc",
    "tab_menu_model.h",
  ]
  public_deps = [
    "//aloha:resources",
    "//base:base",
    "//aloha/resources/vector_icons:vector_icons",
    "//ui/menus:menus",
    "//ui/views:views",
    "//ui/color:color_headers",
    "//ui/gfx",
  ]
}
