source_set("views") {
  testonly = true
  sources = [
    "aloha_web_contents_view_delegate_views.cc",
    "aloha_web_contents_view_delegate_views.h",
    "browser_content/aloha_browser_content_view.cc",
    "browser_content/aloha_browser_content_view.h",
    "controls/tabbed_pane/tabbed_pane.cc",
    "controls/tabbed_pane/tabbed_pane.h",
    "controls/tabbed_pane/tabbed_pane_tab.cc",
    "controls/tabbed_pane/tabbed_pane_tab.h",
    "controls/tabbed_pane/tabbed_pane_tab_strip.cc",
    "controls/tabbed_pane/tabbed_pane_tab_strip.h",
    "widget/widget_delegate_view.cc",
    "widget/widget_delegate_view.h",
  ]
  public_deps = [
    "//aloha:resources",
    "//aloha:resources_grit",
    "//aloha/browser/devtools:aloha_devtools",
    "//aloha/browser/ui/color:color",
    "//aloha/browser/ui/menu:menu",
    "//aloha/browser/ui/views/browser_content/public:public",
    "//aloha/browser/ui/views/widget/public:public",
    "//aloha/resources/browser:resources",
    "//aloha/resources/vector_icons:vector_icons",
    "//aloha/common:common",
    "//base",
    "//chrome/browser/resources/webui_gallery:resources",
    "//components/favicon/content:content",
    "//components/guest_view/browser",
    "//components/guest_view/common:mojom",
    "//components/guest_view/renderer",
    "//components/input:input",
    "//content/public/app",
    "//content/public/browser",
    "//content/public/renderer",
    "//ipc",
    "//mojo/public/cpp/bindings",
    "//net",
    "//third_party/blink/public:blink",
    "//ui/base",
    "//ui/display",
    "//ui/menus",
    "//ui/platform_window",
    "//ui/views:views",
    "//ui/views/controls/webview:webview",
    "//ui/webui",
    "//ui/wm:wm",
    "//v8:v8_headers",
  ]
}
