import("//build/config/ui.gni")
source_set("views") {
  sources = [
    "aloha_views_delegate.h",
    "aloha_web_contents_view_delegate_views.cc",
    "aloha_web_contents_view_delegate_views.h",
    "browser_content/aloha_browser_content_view.cc",
    "browser_content/aloha_browser_content_view.h",
    "controls/tabbed_pane/tabbed_pane.cc",
    "controls/tabbed_pane/tabbed_pane.h",
    "controls/tabbed_pane/tabbed_pane_tab.cc",
    "controls/tabbed_pane/tabbed_pane_tab.h",
    "controls/tabbed_pane/tabbed_pane_tab_strip.cc",
    "controls/tabbed_pane/tabbed_pane_tab_strip.h",
    "widget/widget_delegate_view.cc",
    "widget/widget_delegate_view.h",
  ]
  public_deps = [
    "//aloha:resources",
    "//aloha/browser/devtools:aloha_devtools",
    "//aloha/browser/ui/color:color",
    "//aloha/browser/ui/menu:menu",
    "//aloha/browser/ui/views/browser_content/public:public",
    "//aloha/browser/ui/views/widget/public:public",
    "//aloha/common:common",
    "//aloha/resources/browser:resources",
    "//aloha/resources/vector_icons:vector_icons",
    "//components/favicon/content:content",
    "//components/favicon/core:core",
  ]
  if (use_aura) {
    sources += [ "aloha_views_delegate_aura.cc" ]
  }
}
