source_set("public") {
  sources = [
    "aloha_widget_delegate_view.cc",
    "aloha_widget_delegate_view.h",
  ]
  public_deps = [
    "//aloha:resources",
    "//aloha/browser/devtools:aloha_devtools",
    "//aloha/browser/ui/menu:menu",
    "//aloha/resources/browser:resources",
    "//aloha/resources/vector_icons:vector_icons",
    "//base",
    "//content:content",
  ]
}
